Fix scrubber icon alignment

--- a/packages/core/less/forum/Scrubber.less
+++ b/packages/core/less/forum/Scrubber.less
@@ -1,7 +1,8 @@
 .Scrubber {
   & a {
-    margin-left: -5px;
+    margin-left: -1px;
     color: @muted-color;
+    
     & .fa {
       font-size: 14px;
       margin-right: 2px;
